# supreme-octo-lamp

./: README.md  app.py  batch_processor.py  config.py  debug_entities.py  example_job.txt  job_requirements_extractor.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_cli.py  setup.py  test_entities.py  test_improved.py  test_sentence_extraction.py
src/: cli.py
src/job_requirements_extractor/: __init__.py  __main__.py  batch_processor.py  extractor.py
tests/: test_package_imports.py  test_structure.py  tests2
